--- a/Hotel/src/hotel/view/frmFormaPagamento.form
+++ b/Hotel/src/hotel/view/frmFormaPagamento.form
@@ -392,7 +392,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Segoe UI" size="14" style="1"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Nome ou C&#xf3;digo:"/>
+                    <Property name="text" type="java.lang.String" value="Nome:"/>
                   </Properties>
                 </Component>
                 <Container class="javax.swing.JPanel" name="pnlOpcao">
@@ -445,6 +445,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="SansSerif" size="14" style="0"/>
                         </Property>
+                        <Property name="selected" type="boolean" value="true"/>
                         <Property name="text" type="java.lang.String" value="Por nome"/>
                       </Properties>
                       <Events>
